# mtg-deck-engine

./: .gitignore  LICENSE  README.md  densa-deck.spec  mtg-engine.spec  pyproject.toml
docs/: MCP-OPERATOR.md
examples/: sample_commander.txt  sample_modern.txt
packaging/: README.txt  build_installer.ps1  installer.iss
scripts/: bench_analyst_diag.py  bench_analyst_inspect.py  bench_analyst_models.py  build_desktop.py  generate_license.py
src/densa_deck/: __init__.py  cli.py  licensing.py
src/densa_deck/analyst/: candidates.py  runner.py
src/densa_deck/app/: api.py
src/densa_deck/app/static/: app.css  app.js  builder.js  index.html
src/densa_deck/combos/: data.py
src/densa_deck/data/: database.py
src/densa_deck/deck/: resolver.py  url_import.py
src/densa_deck/export/: exporter.py
src/densa_deck/matchup/: gauntlet.py  simulator.py
src/densa_deck/mcp/: license_gate.py  server.py
src/mtg_deck_engine/: __init__.py  __main__.py  cli.py  legal.py  licensing.py  models.py  tiers.py
src/mtg_deck_engine/analysis/: __init__.py  advanced.py  castability.py  deck_diff.py  power_level.py  staples.py  static.py
src/mtg_deck_engine/analyst/: __init__.py  add_candidates.py  candidates.py  coach.py  pipeline.py  prompts.py  runner.py  verifiers.py
src/mtg_deck_engine/analyst/backends/: __init__.py  llama_cpp.py
src/mtg_deck_engine/benchmarks/: __init__.py  analyst_gauntlet.py  analyst_gauntlet_decks.py  suites.py
src/mtg_deck_engine/classification/: __init__.py  tagger.py
src/mtg_deck_engine/data/: __init__.py  database.py  scryfall.py
src/mtg_deck_engine/deck/: __init__.py  parser.py  resolver.py  url_import.py  validator.py
src/mtg_deck_engine/export/: __init__.py  exporter.py
src/mtg_deck_engine/formats/: __init__.py  profiles.py
src/mtg_deck_engine/goldfish/: __init__.py  heuristics.py  mulligan.py  objectives.py  runner.py  state.py
src/mtg_deck_engine/probability/: opening_hand.py
src/mtg_deck_engine/versioning/: __init__.py  impact.py  storage.py  trends.py
tests/: test_analyst.py  test_analyst_adds.py  test_analyst_coach.py  test_analyst_gauntlet.py  test_app_api.py  test_classification.py  test_cli.py  test_combo_aware_v3.py  test_gauntlet_combos.py  test_goldfish.py  test_licensing.py  test_mcp_server.py  test_new_features.py  test_parser.py  test_phase6.py  test_resolver.py  test_validator.py  test_versioning.py
