[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-deck-engine"
version = "0.1.0"
description = "MTG deck analysis, goldfish testing, matchup simulation, and player insight engine"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
desktop = [
    "pyinstaller>=6.0",
]
analyst = [
    # Local GGUF inference for the LLM analyst layer. Optional — the analyst
    # falls back to MockBackend if this isn't installed.
    "llama-cpp-python>=0.3",
]

[project.scripts]
mtg-engine = "mtg_deck_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
